# MLOPS-Course

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  dvc.yaml  pyproject.toml  requirements.txt
.dvc/: config
app/: server.py
conf/pipeline/: titanic.yaml
models/: .gitignore  model_logistic.pkl  model_random_forest.pkl
outputs/2025-05-22/19-18-07/.hydra/: hydra.yaml
outputs/2025-05-22/19-32-38/.hydra/: hydra.yaml
outputs/2025-05-22/19-33-20/.hydra/: hydra.yaml
outputs/2025-05-22/19-38-18/.hydra/: hydra.yaml
outputs/2025-05-22/19-48-10/.hydra/: hydra.yaml
outputs/2025-05-22/19-50-07/.hydra/: hydra.yaml
outputs/2025-05-22/19-51-59/.hydra/: hydra.yaml
outputs/2025-05-22/19-53-48/.hydra/: hydra.yaml
outputs/2025-05-22/19-56-09/.hydra/: hydra.yaml
outputs/2025-05-22/20-07-37/.hydra/: hydra.yaml
outputs/2025-05-22/20-08-30/.hydra/: hydra.yaml
outputs/2025-05-22/20-40-43/.hydra/: hydra.yaml
outputs/2025-05-22/20-42-17/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-22/20-43-50/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-22/20-43-53/.hydra/: hydra.yaml
outputs/2025-05-22/20-45-17/.hydra/: config.yaml  hydra.yaml
outputs/2025-05-22/20-45-20/.hydra/: hydra.yaml
outputs/2025-05-22/20-46-03/.hydra/: hydra.yaml
src/: dvc_creation.sh  main.py  process_data.py  train_model.py
src/data/: load.py
src/features/: build_features.py
src/models/: train_model.py
